2004-07-13 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.12.2 Released.

2004-07-08 Craig Franklin <craigfranklin@comcast.net>
  * Allow empty modules and publics in gpal.
  * Allow if statements in a module or public, but outside of subprograms
    in gpal.

2004-07-07 Craig Franklin <craigfranklin@comcast.net>
  * Added support for manually assigned data memory addresses in gpal.

2004-07-04 Craig Franklin <craigfranklin@comcast.net>
  * Added support for nested case statements in gpal.
  * Added support for multiple switch elements in gpal case statements.

2004-07-03 Craig Franklin <craigfranklin@comcast.net>
  * Added symbol alias feature to gpal.

2004-06-27 Craig Franklin <craigfranklin@comcast.net>
  * Added several new gpal optimizations.

2004-06-25 Craig Franklin <craigfranklin@comcast.net>
  * Fixed gpasm regression.  Duplicate extern feature can cause assertions.
  * Allow cblocks in gpasm macros.

2004-06-16 Craig Franklin <craigfranklin@comcast.net>
  * Allow duplicate extern directives in gpasm.

2004-06-15 Craig Franklin <craigfranklin@comcast.net>
  * Fixed relocations in idata sections.

2004-05-05 Craig Franklin <craigfranklin@comcast.net>
  * Added labels and gotos to gpal.

2004-05-02 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.12.1 Released.

2004-04-22 Craig Franklin <craigfranklin@comcast.net>
  * Added processor pub file generation.
  * Added default search path to gpal.

2004-04-17 Craig Franklin <craigfranklin@comcast.net>
  * Added support for #if directive and allow else in column 1.
  * Fixed malformed header files.  They were missing a NL before the EOF.
  * Added interrupt context save to gpal.

2004-03-13 Craig Franklin <craigfranklin@comcast.net>
  * Added gplink command line option to disable list file output.
  * Fixed gplink bug that caused an error to be generated if a source file
    wasn't found when generating a list file.
  * Fixed gplink 18xx initialized data sections so retlw isn't used.